--- a/bai9/index.html
+++ b/bai9/index.html
@@ -5,6 +5,23 @@
     <title>Title</title>
 </head>
 <body>
+    <h1>thẻ a</h1>
+    <p>href là liên kết của thẻ a</p>
+    <p>thuộc tính target = _blank sẽ mở link trong 1 tab mới trên trình duyệt</p>
+    <div>
+        Links are found in nearly all web pages. Links allow users to click their way from page to page.
+        <a href="https://www.google.com/">Google</a>
+    </div>
+
+    <div>
+        Links are found in nearly all web pages. Links allow users to click their way from page to page.
+        <a href="https://www.google.com/" target="_blank">Google target _blank</a>
+    </div>
+
+    <div>
+        Links are found in nearly all web pages. Links allow users to click their way from page to page.
+        <a href="https://www.google.com/" target="_parent">Google target _parent</a>
+    </div>
 
 </body>
 </html>
