--- a/bai10/index.html
+++ b/bai10/index.html
@@ -5,6 +5,10 @@
     <title>Title</title>
 </head>
 <body>
+    <h1>thẻ hình ảnh trong html</h1>
+<p>
+    <img src="image/7719c5b1fdd9852a5473a9248aa6754bca752045e3af900fcbb683476a5e4734.jpg" alt="ảnh rỗng0">
 
+</p>
 </body>
 </html>
