--- a/015/index.html
+++ b/015/index.html
@@ -45,16 +45,15 @@
             background: aquamarine;
             padding: 30px 0;
         }
-
     </style>
 </head>
 <body>
 
 <div class="page-wrap">
-    <div class="header">
+    <header class="header">
         Nội dung của header
-    </div> <!-- End .header -->
-    <div class="navigation">
+    </header> <!-- End .header -->
+    <nav class="navigation">
         <ul>
             <li><a href="#">Trang chủ</a></li>
             <li><a href="#">Giới thiệu</a></li>
@@ -62,12 +61,12 @@
             <li><a href="#">Liên hệ</a></li>
             <li><a href="#">Tin tức</a></li>
         </ul>
-    </div> <!-- End .navigation -->
-    <div class="main">
-        <div class="sidebar-left">
+    </nav> <!-- End .navigation -->
+    <main class="main">
+        <aside class="sidebar-left">
             Nội dung sidebar bên trái
-        </div>
-        <div class="content">
+        </aside>
+        <article class="content">
             <div>HTML5 is supported in all modern browsers.
 
                 In addition, all browsers, old and new, automatically handle unrecognized elements as inline elements.
@@ -83,10 +82,10 @@
                 In addition, all browsers, old and new, automatically handle unrecognized elements as inline elements.
 
                 Because of this, you can "teach" older browsers to handle "unknown" HTML elements.</div>
-        </div> <!-- End content -->
-        <div class="sidebar-right">Nội dung của sidebar bên phải</div>
-    </div> <!-- End .main -->
-    <div class="footer">Nội dung của footer</div> <!-- End .footer -->
+        </article> <!-- End content -->
+        <aside class="sidebar-right">Nội dung của sidebar bên phải</aside>
+    </main> <!-- End .main -->
+    <footer class="footer">Nội dung của footer</footer> <!-- End .footer -->
 </div>
 
 </body>
